--- a/client/src/components/NewsManager/NewsTable.css
+++ b/client/src/components/NewsManager/NewsTable.css
@@ -280,14 +280,14 @@
 }
 
 .author-info span {
-  color: #fff;
+  color: #444444;
   font-size: 0.9rem;
   font-weight: 500;
 }
 
 /* Views count styling */
 .views-count {
-  color: #c9c9c9;
+  color: #555555;
   font-size: 0.9rem;
   font-weight: 500;
 }
@@ -355,7 +355,7 @@
 .article-details h4 {
   margin: 0 0 0.25rem 0;
   font-size: 1rem;
-  color: #fff;
+  color: #333333;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
